src/objects/Address__c.object
<CustomObject>
    <fields>
        <fullName>Revenue_Assigment__c</fullName>
        <label>Revenue Assigment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 Not known</fullName>
                    <default>true</default>
                    <label>0 Not known</label>
                </value>
                <value>
                    <fullName>1 Domestic revenue</fullName>
                </value>
                <value>
                    <fullName>2 Foreign revenue</fullName>
                </value>
                <value>
                    <fullName>3 Affiliate company revenue (intercompany)</fullName>
                </value>
                <value>
                    <fullName>6 Taxable (Special Regions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAPValidationStatusDisplay__c</fullName>
        <formula>IMAGE( CASE( SAP_Validation_Status__c, &quot;Validated&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Validating&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Not Validated&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;Rejected&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/img/samples/light_red.gif&quot;), &quot;SAP Validation Status&quot;) &amp; &quot; &quot; &amp; CASE( SAP_Validation_Status__c, &quot;Validated&quot;, &quot;Validated&quot;, &quot;Validating&quot;, &quot;Validating&quot;, &quot;Not Validated&quot;, &quot;Not Validated&quot;, &quot;Rejected&quot;,&quot;Rejected&quot;, &quot;Not Validated (default)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>SAP Validation status is automatically updated.
Red: Not yet validated
Yellow: Busy being validated
Green: Validated.</inlineHelpText>
        <label>SAP Validation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Reference__c</fullName>
        <description>SAP Base code that corresponds to this address. This is hierarchically-based on the SAP Parent code in the Account and the looked up in SAP. When it is not populated, then this address had not been validated. This is not editable by normal users.</description>
        <externalId>true</externalId>
        <inlineHelpText>SAP Base code that corresponds to this address.</inlineHelpText>
        <label>SAP Base Code</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Validation_Status__c</fullName>
        <inlineHelpText>The validation state of this address with respect to SAP. A new address starts a SAP validation process. Any changes to this account address cause the SAP base code to be revalidated again.</inlineHelpText>
        <label>SAP Validation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validated</fullName>
                </value>
                <value>
                    <fullName>Not Validated</fullName>
                    <default>true</default>
                    <label>Not Validated</label>
                </value>
                <value>
                    <fullName>Validating</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <label>Sales Org</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Enter the State, Province, County, Prefecture, Kanton, Federal Land (Germany), etc.. here</inlineHelpText>
        <label>Region / State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This field is used to update status when MDM team approves / rejects an address.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <inlineHelpText>Enter the account location&apos;s street name here</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPAOtherEmailIds__c</fullName>
        <label>TPA Other Email Ids</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TPA_AMA_Account_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA AMA Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Address_City__c</fullName>
        <formula>IF(TPA_Local_Address_Required__c, (IF(ISBLANK(International_City__c) , City__c , International_City__c)) , City__c)</formula>
        <label>TPA Address City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Address_Country__c</fullName>
        <formula>IF(TPA_Local_Address_Required__c, (IF(ISPICKVAL(International_Country__c, &quot;&quot;) , TEXT(Country__c) , TEXT(International_Country__c))) , TEXT(Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Address_PostalCode__c</fullName>
        <formula>IF(TPA_Local_Address_Required__c, (IF(ISBLANK(International_PostalCode__c) , PostalCode__c , International_PostalCode__c)) , PostalCode__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA Address PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Address_State__c</fullName>
        <formula>IF(TPA_Local_Address_Required__c, (IF(ISBLANK(International_State__c) , State__c , International_State__c)) , State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA Address Region / State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Address_Street__c</fullName>
        <formula>IF(TPA_Local_Address_Required__c, (IF(ISBLANK(International_Street__c) , Street__c , International_Street__c)) , Street__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TPA Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Local_Address_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TPA Local Address Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Authority__c</fullName>
        <label>Tax Authority</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_1__c</fullName>
        <label>Tax Number 1</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_2__c</fullName>
        <label>Tax Number 2</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_3__c</fullName>
        <label>Tax Number 3</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Number_Type__c</fullName>
        <description>Used for Argentina for the DGI tax report</description>
        <inlineHelpText>Used for Argentina for the DGI tax report</inlineHelpText>
        <label>Tax Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <label>C.I. Policía Federal [00]</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>C.I. Buenos Aires [01]</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>C.I. Catamarca [02]</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>C.I. Córdoba [03]</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>C.I. Corrientes [04]</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>C.I. Entre Ríos [05]</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>C.I. Jujuy [06]</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>C.I. Mendoza [07]</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>C.I. La Rioja [08]</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>C.I. Salta [09]</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>C.I. San Juan [10]</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>C.I. San Luis [11]</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>C.I. Santa Fé [12]</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>C.I. Santiago del Estero [13]</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>C.I. Tucumán [14]</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>C.I. Chaco [15]</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>C.I. Chaco [16]</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>C.I. Chubut [17]</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>C.I. Formosa [18]</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>C.I. Misiones [19]</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>C.I. Neuquén [20]</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>C.I. La Pampa [21]</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>C.I. Río Negro [22]</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>C.I. Tierra del Fuego [24]</label>
                </value>
                <value>
                    <fullName>31</fullName>
                    <label>NIT [31]</label>
                </value>
                <value>
                    <fullName>41</fullName>
                    <label>Pasaporte [41]</label>
                </value>
                <value>
                    <fullName>80</fullName>
                    <label>C.U.I.T. [80]</label>
                </value>
                <value>
                    <fullName>85</fullName>
                    <label>D.N.R.P. [85]</label>
                </value>
                <value>
                    <fullName>86</fullName>
                    <label>C.U.I.L. [86]</label>
                </value>
                <value>
                    <fullName>87</fullName>
                    <label>C.D.I. [87]</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Type__c</fullName>
        <description>Classification of companies according to tax aspects</description>
        <inlineHelpText>Classification of companies according to tax aspects</inlineHelpText>
        <label>Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spec. person responsible for sales/purch.tax [01]</fullName>
                </value>
                <value>
                    <fullName>Unspec. person responsible for sales/purch.tax [02]</fullName>
                </value>
                <value>
                    <fullName>No person responsible for sales/purch.tax [03]</fullName>
                </value>
                <value>
                    <fullName>Subject to exemption from sales/purch.tax [04]</fullName>
                </value>
                <value>
                    <fullName>Sales/purch.tax consumer [05]</fullName>
                </value>
                <value>
                    <fullName>Taxpayer (monotributario) [07]</fullName>
                </value>
                <value>
                    <fullName>Unclassified taxpayer [08]</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taxation_Status__c</fullName>
        <label>Taxation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully taxable</fullName>
                    <default>true</default>
                    <label>Fully taxable</label>
                </value>
                <value>
                    <fullName>Tax Exempt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Office location is one of potentially many locations where the account (company) is present in this country. In some cases, there may be more than one Billing- and Shipping Address for an account.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Location</fullName>
                    <default>true</default>
                    <label>Office Location</label>
                </value>
                <value>
                    <fullName>Billing Address</fullName>
                </value>
                <value>
                    <fullName>Shipping Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Registration_Number__c</fullName>
        <label>VAT Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorNumber__c</fullName>
        <description>Vendor number of the Account from SAP.</description>
        <inlineHelpText>Vendor number of the Account from SAP.</inlineHelpText>
        <label>Vendor Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_CheckList_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor CheckList Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>VendorAddress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Check_List_Reason__c</fullName>
        <label>Vendor Check List Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Update</fullName>
                </value>
                <value>
                    <fullName>Vendor Updated</fullName>
                </value>
                <value>
                    <fullName>New Vendor Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Check_List_Updated_Date__c</fullName>
        <label>Vendor Check List Updated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vendor_Registration_Number__c</fullName>
        <label>Vendor Registration Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vendor_Tier__c</fullName>
        <label>Vendor Check List</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_account_created_from_TPA__c</fullName>
        <label>Vendor account created from TPA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <inlineHelpText>Website if different from Parent account</inlineHelpText>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legacy_id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>legacy id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MDM_Validation_Status__c</columns>
        <columns>Street__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>PostalCode__c</columns>
        <columns>SAP_Reference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>MDM_Validated</fullName>
        <active>true</active>
        <label>MDM Validated</label>
    </recordTypes>
    <recordTypes>
        <fullName>TPA_Unvalidated_Addresses</fullName>
        <active>true</active>
        <label>TPA Unvalidated Addresses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unvalidated</fullName>
        <active>true</active>
        <label>Unvalidated</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ADD_VR01_CRM_Restrict_Validated_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.DeveloperName = &apos;MDM_Validated&apos;,
NOT(ISNEW()), 
PRIORVALUE(RecordTypeId) == RecordTypeId,
NOT(OR(
CONTAINS($Profile.Name,&apos;System Administrator&apos;),
$Profile.Name == &apos;IQVIA Salesforce Platform Support&apos;,
$Permission.TPA_Admin
)),
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false)</errorConditionFormula>
        <errorMessage>You cannot edit the validated address record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR02_CRM_Address_Line_1</fullName>
        <active>true</active>
        <description>ESPSFDCQI-10458</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;Unvalidated&apos;,
    ISBLANK(PO_Box__c),
    ISBLANK(Address_Line_1__c),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false,
    VALUE($Setup.CRM_Config__c.Current_Release__c) &lt;= VALUE($Setup.Current_Release_Version__c.Current_Release__c)
)</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>Address Line 1 is Mandatory when the PO Box is blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR03_CRM_Address_Line_1_Local</fullName>
        <active>true</active>
        <description>ESPSFDCQI-10458</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;Unvalidated&apos;,
    ISBLANK(PO_Box__c),
    ISBLANK(Address_Line_1_Local__c),
    NOT(ISBLANK(TEXT(Language__c))),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false,
    VALUE($Setup.CRM_Config__c.Current_Release__c) &lt;= VALUE($Setup.Current_Release_Version__c.Current_Release__c)
)</errorConditionFormula>
        <errorDisplayField>Address_Line_1_Local__c</errorDisplayField>
        <errorMessage>Address Line 1 (Local) is Mandatory when the PO Box is blank and Language is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR04_CRM_Customer_Name_Local</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11013</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName == &apos;Unvalidated&apos;,
ISBLANK(International_Name__c),
NOT(ISBLANK(TEXT(Language__c))),
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>International_Name__c</errorDisplayField>
        <errorMessage>Customer Name (Local) is required when  Language is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR05_CRM_Validation_City_Local</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11013</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName == &apos;Unvalidated&apos;,
ISBLANK(International_City__c),
NOT(ISBLANK(TEXT(Language__c))),
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>International_City__c</errorDisplayField>
        <errorMessage>City (Local) is required when  Language is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR06_CRM_Length_Of_Customer_Name</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11289</description>
        <errorConditionFormula>AND( LEN( Name ) &gt; 70,
 RecordType.DeveloperName  = &apos;Unvalidated&apos;,
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Customer Name must be less than 70 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR06_CRM_Validation_Tax_Type</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11290</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;Unvalidated&apos;,
    ISPICKVAL(Tax_Type__c, &apos;&apos;),
    ISPICKVAL(Country__c, &apos;Argentina&apos;),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>Tax_Type__c</errorDisplayField>
        <errorMessage>Tax Type is required when Country is Argentina.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR07_CRM_Length_Customer_Name_local</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11289</description>
        <errorConditionFormula>AND( LEN(  International_Name__c ) &gt; 70,
 RecordType.DeveloperName  = &apos;Unvalidated&apos;,
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false)</errorConditionFormula>
        <errorDisplayField>International_Name__c</errorDisplayField>
        <errorMessage>Customer Name (Local) must be less than 70 characters</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR07_CRM_Validation_Tax_Number_1</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11290</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;Unvalidated&apos;,
    ISBLANK(Tax_Number_1__c),
    OR(
        ISPICKVAL(Country__c, &apos;Argentina&apos;),
        ISPICKVAL(Country__c, &apos;Bolivia&apos;),
        ISPICKVAL(Country__c, &apos;Brazil&apos;),
        ISPICKVAL(Country__c, &apos;Chile&apos;),
        ISPICKVAL(Country__c, &apos;Colombia&apos;),
        ISPICKVAL(Country__c, &apos;Ecuador&apos;),
        ISPICKVAL(Country__c, &apos;Guatemala&apos;),
        ISPICKVAL(Country__c, &apos;Mexico&apos;),
        ISPICKVAL(Country__c, &apos;Peru&apos;),
        ISPICKVAL(Country__c, &apos;Paraguay&apos;),
        ISPICKVAL(Country__c, &apos;Turkey&apos;),
        ISPICKVAL(Country__c, &apos;Uruguay&apos;),
        ISPICKVAL(Country__c, &apos;Venezuela&apos;)
    ),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>Tax_Number_1__c</errorDisplayField>
        <errorMessage>Tax Number 1 is required when Country is Argentina, Bolivia, Brazil, Chile, Colombia, Ecuador, Guatemala, Mexico, Peru, Paraguay, Turkey, Uruguay, or Venezuela.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR08_CRM_Region_State</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11814</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;Unvalidated&apos;,
    ISBLANK(State__c),
    OR(
        ISPICKVAL(Country__c, &apos;India&apos;),
        ISPICKVAL(Country__c, &apos;Australia&apos;),
        ISPICKVAL(Country__c, &apos;Brazil&apos;),
        ISPICKVAL(Country__c, &apos;Canada&apos;),
        ISPICKVAL(Country__c, &apos;New Zealand&apos;),
        ISPICKVAL(Country__c, &apos;USA&apos;)
    ),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>State/Region is required when Country = India, Australia, Brazil, Canada, New Zealand, or USA.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR09_CRM_Language_New_Sales_Org</fullName>
        <active>true</active>
        <description>ESPSFDCQI-11815</description>
        <errorConditionFormula>AND(
    RecordType.DeveloperName == &apos;Unvalidated&apos;,
    ISPICKVAL(New_Sales_Org__c, &apos;[SA01] IMS Saudi Arabia Limited&apos;),
    NOT(ISPICKVAL(Language__c, &apos;AR&apos;)),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>Language__c</errorDisplayField>
        <errorMessage>Language should be Arabic [ar] when Sales Org = [SA01] IMS Saudi Arabia Limited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR10_CRM_DescartesCheck</fullName>
        <active>true</active>
        <description>ESPSFDCQI-12068</description>
        <errorConditionFormula>AND(
	ISNEW(),
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
    NOT( RecordType.DeveloperName = &apos;TPA_Unvalidated_Addresses&apos;),
	Account__c != Null,
	OR( 
		AND($Setup.Descartes_Approval_Setting__c.Account_Enabled__c, NOT(ISPICKVAL(Account__r.DPS_Status__c , &apos;Cleared&apos;))),
		AND(!$Setup.Descartes_Approval_Setting__c.Account_Enabled__c, (ISPICKVAL(Account__r.DPS_Status__c , &apos;Pending&apos;)))
	)
)</errorConditionFormula>
        <errorMessage>This account has not passed Denied Party Screening and can be a potential sanctioned party. If you still would like to proceed or have any questions related with Denied Party Screening, please contact global finance  (Credit.Assessments-NA@iqvia.com).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR11_CRM_VATReg_Req</fullName>
        <active>true</active>
        <description>ESPSFDCQI-15874</description>
        <errorConditionFormula>AND( 
     ISPICKVAL( Country__c , &apos;Saudi Arabia&apos;),
     ISBLANK(VAT_Registration_Number__c),
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE
)</errorConditionFormula>
        <errorDisplayField>VAT_Registration_Number__c</errorDisplayField>
        <errorMessage>VAT Registration Number is required when Country is Saudi Arabia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR12_CRM_PostalCode_Req</fullName>
        <active>true</active>
        <description>ESPSFDCQI-15874</description>
        <errorConditionFormula>AND(
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
    ISPICKVAL(Country__c,&apos;Saudi Arabia&apos;),
    OR(ISBLANK(PostalCode__c),
       LEN(PostalCode__c) &lt;&gt;5, 
       NOT(ISNUMBER(PostalCode__c))
    )
)</errorConditionFormula>
        <errorDisplayField>PostalCode__c</errorDisplayField>
        <errorMessage>PostalCode should be 5 digital number when Country is Saudi Arabia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR13_CRM_HouseNum_Req</fullName>
        <active>true</active>
        <description>ESPSFDCQI-15874</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
    ISPICKVAL(Country__c,&apos;Saudi Arabia&apos;),
    OR(ISBLANK(House_Number__c),
       LEN(House_Number__c) &lt;&gt;4, 
       NOT(ISNUMBER( House_Number__c ))
    )       
)</errorConditionFormula>
        <errorDisplayField>House_Number__c</errorDisplayField>
        <errorMessage>House Number is Required and should have 4 digit number when Country = Saudi Arabia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR14_CRM_BuildingNum_Req</fullName>
        <active>true</active>
        <description>ESPSFDCQI-15874</description>
        <errorConditionFormula>AND(
    $Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
    ISPICKVAL(Country__c , &apos;Saudi Arabia&apos;),
    OR( 
	   ISBLANK(Building_Number__c),
       LEN(Building_Number__c) &lt;&gt; 4, 
       NOT(ISNUMBER( Building_Number__c ))
	)
)</errorConditionFormula>
        <errorDisplayField>Building_Number__c</errorDisplayField>
        <errorMessage>Building Number is Required and should be 4 digit number when Country = Saudi Arabia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR15_CRM_District_Req</fullName>
        <active>true</active>
        <description>ESPSFDCQI-15874</description>
        <errorConditionFormula>AND(
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == FALSE,
ISPICKVAL( Country__c , &apos;Saudi Arabia&apos;),
ISBLANK( Address_Line_4__c )
)</errorConditionFormula>
        <errorDisplayField>Address_Line_4__c</errorDisplayField>
        <errorMessage>District is Required when Country = Saudi Arabia</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ADD_VR_EMAIL_Required</fullName>
        <active>true</active>
        <description>ESPSFDCQI  : 17668 , 17755</description>
        <errorConditionFormula>AND(
ISNEW(),
RecordType.DeveloperName == &apos;Unvalidated&apos;,
ISBLANK(Email__c),
OR(
ISPICKVAL(Country__c, &apos;Mexico&apos;),
ISPICKVAL(Country__c, &apos;Malaysia&apos;)
),
$Setup.Mulesoft_Integration_Control__c.Ignore_Validation_Rules__c == false
)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>Email is required when Country = Malaysia or Mexico.</errorMessage>
    </validationRules>
</CustomObject>